# nomad-stac-converter

./: .gitignore  .pre-commit-config.yaml  README.md  converter-config.yml  pyproject.toml  wkt_summary.csv
.github/: ci.yml
catalog_output/: catalog.json
catalog_output/10-days-lno/: collection.json
catalog_output/10-days-lno/diffraction-order-119/: collection.json
catalog_output/10-days-lno/diffraction-order-121/: collection.json
catalog_output/10-days-lno/diffraction-order-124/: collection.json
catalog_output/10-days-lno/diffraction-order-127/: collection.json
catalog_output/10-days-lno/diffraction-order-131/: collection.json
catalog_output/10-days-lno/diffraction-order-134/: collection.json
catalog_output/10-days-lno/diffraction-order-136/: collection.json
catalog_output/10-days-lno/diffraction-order-149/: collection.json
catalog_output/10-days-lno/diffraction-order-164/: collection.json
catalog_output/10-days-lno/diffraction-order-167/: collection.json
catalog_output/10-days-lno/diffraction-order-168/: collection.json
catalog_output/10-days-lno/diffraction-order-169/: collection.json
catalog_output/10-days-lno/diffraction-order-171/: collection.json
catalog_output/10-days-lno/diffraction-order-189/: collection.json
catalog_output/10-days-lno/diffraction-order-190/: collection.json
catalog_output/10-days-lno/diffraction-order-196/: collection.json
notebooks/: intro.py  lno_10_days_analysis.py
src/: cli.py  downloader.py  instrument.py  io.py  main.py  processing.py  settings.py
src/stac_extra/: ssys_extension.py
(+34664 files in other folders)
